--- a/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
+++ b/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
@@ -35,7 +35,8 @@
 
 \section{Overview}
 
-The {\tt GlueX} {\tt FSRoot} format is a flat {\tt TTree} format.  All variables are {\tt float}.  Multiple combinations within an event are listed as separate {\tt TTree} entries, just like entries from distinct events.
+The {\tt GlueX} {\tt FSRoot} format is a flat {\tt TTree} format.  All variables are {\tt float}.  Multiple combinations within an event are listed as separate {\tt TTree} entries, just like entries from distinct events.  The format is designed to be compatible with the {\tt FSRoot} package.
+
 
 \section{Final States}
 \label{sec:numbering}
@@ -75,7 +76,12 @@ The ``Event Information'' variables contain information about the event as a who
   RPyPB:          "
   RPzPB:          "
   REnPB:          "
+  MCPxPB:       thrown beam parameters (MC only)
+  MCPyPB:         "
+  MCPzPB:         "
+  MCEnPB:         "
 \end{verbatim}
+
 
 
 \section{Particle Four-Momenta}
@@ -90,9 +96,11 @@ The ``Particle Four-Momenta'' variables contain the four-momentum for each parti
   (prefix)EnP(n):  energy of particle (n)
 \end{verbatim}
 
-Different types of four-momenta are distinguished using prefixes.  Raw four-momenta have a prefix~{\tt R}; the final four-momenta (the fully-constrained four-momenta resulting from the kinematic fit) have no prefix.
+Different types of four-momenta are distinguished using prefixes.  Raw four-momenta have a prefix~{\tt R}; the final four-momenta (the fully-constrained four-momenta resulting from the kinematic fit) have no prefix; MC truth information have a prefix~{\tt MC}.
 
 Different particles are differentiated using the postfix {\tt P(n)}, where {\tt (n)} is the number of the particle in the ordered list.  Four-momenta for secondaries originating from particle~{\tt (n)}, such as the two $\gamma$'s from a $\pi^0$, are recorded using {\tt P(n)a} and {\tt P(n)b}, where the ordering follows the same conventions as above, or, in the case of identical daughter particles, no ordering is assumed.  As two examples: in the process $\gamma p \to\pi^+\pi^-J/\psi p; J/\psi\to\mu^+\mu^-$, the raw energy of the $\pi^+$ is given by {\tt REnP4}; and in the process $\gamma p \to \pi^+\pi^-J/\psi p; J/\psi\to\pi^+\pi^-\pi^0$, the y-momentum of a photon from the $\pi^0$ decay, after the kinematic fit, is given by {\tt PyP6b}.
+
+
 
 
 \section{Track Information}
@@ -103,6 +111,77 @@ Track information is written out for every reconstructed track that is part of a
   TkChi2P(n):   chi2 of the track fit
   TkNDFP(n):    number of degrees of freedom for the track fit
 \end{verbatim}
+
+
+\section{Shower Information}
+\label{sec:nt:track}
+
+Shower information is written out for every reconstructed shower that is part of a final state.  The postfix {\tt P(n)} follows the same convention as for the four-momenta (section~\ref{sec:nt:momentum}).
+\begin{verbatim}
+  ShQualityP(n):   a shower quality score
+\end{verbatim}
+
+
+\section{MC Truth Information}
+\label{sec:nt:track}
+
+The following variables can be used to help keep track of truth information.
+
+\begin{verbatim}
+  MCDecayCode1:      the true code1, described in the
+                       "final state numbering" section
+  MCDecayCode2:      the true code2, described in the
+                       "final state numbering" section
+  MCExtras:          1000 * number of neutrinos +
+                      100 * number of K_L +
+                       10 * number of neutrons +
+                        1 * number of antineutrons
+  MCSignal:          1 if the reconstructed final state
+                       matches the generated final state;
+                     0 otherwise
+\end{verbatim}
+
+
+\section{Final State Numbering}
+\label{sec:numbering}
+
+Final states are designated using two integers, ``code1'' and ``code2''.  The digits of each integer are used to specify the number of different particle types in the final state:
+\begin{verbatim}
+    code1 = abcdefg
+            a = number of gamma
+            b = number of K+ 
+            c = number of K- 
+            d = number of Ks  ( --> pi+ pi- )
+            e = number of pi+ 
+            f = number of pi- 
+            g = number of pi0 ( --> gamma gamma )
+
+    code2 = hijklmnop
+            h = number of Lambda (--> p+ pi-)
+            i = number of ALambda (--> p- pi+)
+            j = number of e+
+            k = number of e- 
+            l = number of mu+ 
+            m = number of mu-
+            n = number of p+ 
+            o = number of p- 
+            p = number of eta  ( --> gamma gamma )
+\end{verbatim}
+These integers are sometimes combined into a single string of the form:
+\begin{verbatim}
+    "code2_code1"
+\end{verbatim}
+Here are a few examples:
+\begin{verbatim}
+    "0_111":      pi+ pi- pi0
+    "0_1000002":  gamma pi0 pi0
+    "1_220000":   eta K+ K+ K- K-
+    "11000_110":  mu+ mu- pi+ pi-
+\end{verbatim}
+%In the root trees, four-momenta and other information are listed for particles in the following order:
+%\begin{verbatim}
+%    e+ e- mu+ mu- p+ p- eta gamma K+ K- Ks pi+ pi- pi0
+%\end{verbatim}
 
 
 
