--- a/run_tracking_form/checklist_run.tex
+++ b/run_tracking_form/checklist_run.tex
@@ -50,4 +50,8 @@ runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cm
 runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
 \end{tabular}
 
+\begin{center}
+To print more sheets, type {\tt print\_blank\_run\_tracking\_forms} as user hdops on any gluon node.
+\end{center}
+
 \end{document}
