--- a/run_tracking_form/checklist_run.tex
+++ b/run_tracking_form/checklist_run.tex
@@ -47,7 +47,7 @@ runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cm
 runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
 runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
 runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline
 \end{tabular}
 
 \begin{center}
