--- a/PWA_scripts/Bootstrap/README
+++ b/PWA_scripts/Bootstrap/README
@@ -12,7 +12,7 @@ These scripts are still pretty raw and need much improvement for ease of use, bu
 Note: for eta pi, the fits do not take too long, therefore I chose to do one job per mass bin. If you ahve 60 mass bins, there are 60 jobs running. At some point (or for fits that take awhile) it may be wise to submit one job per mass bin and bootstrap. This would correspond to N_MassBins*N_Bootstrap jobs. 
 7) If you made it this far ad your jobs are runing, congratulations. Once your jobs are done running, it is time to plot the results. For this, I have ammended the plot_etapi program in halld_sim/src/programs/AmplitudeAnalysis/ to create Bootstrap_plot_etapi_delta_SPD. I have a folder Bootstrap_plot_etapi_delta_SPD in this directory. One needs to compile this program to run in the GlueX framework. To keep things consistent, do so in your own local halld_sim in the directory halld_sim/src/programs/AmplitudeAnalysis/. This program creates text files in each mass bin that contains the intensity and error (from minut) of each partial wave.
 8) in your baseDir, run root -l drawWaves.C. This root macro will calculate the std dev and mean of the bootstraps and plot them. Note: the mean of the bootstraps is plotted on each graph. This is not the result you want. You want to perform a fit to the real data then read in thsoe results. For now, I have just commented out the relevant code to do this.
-9) Use Drawing_Bootstrap_errors.py to to plot the results from fitting the original data in different M and t bins, 
+9) Drawing_Bootstrap_errors.py can be used as an alternative to "drawWaves.C" to plot the results from fitting the original data in different M and t bins, 
 with the uncertainties from bootstraping. It takes 6 arguments, the waveset used in the fitting, 
 number of M bins, number of bootstraps the path of the directory that contains directories corresponding to M bins, 
 and the path for the text file with fit results from fitting the original data. 
