Added Vee Information

--- a/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
+++ b/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
@@ -127,6 +127,15 @@ Shower information is written out for every reconstructed shower that is part of
   ShQualityP(n):   a shower quality score
 \end{verbatim}
 
+\section{Vee Information}
+\label{sec:nt:vee}
+
+This information is recorded for each $K^0_S\to\pi^+\pi^-$, $\Lambda \to p\pi^-$ and $\overline{\Lambda}\to\overline{p}\pi^+$ decay:
+\begin{verbatim}
+  VeeLSigmaP(n):   the separation between the primary and
+                    secondary vertex (L) over its error (sigma)
+  VeeLP(n):        the flight length (L)
+\end{verbatim}
 
 \section{MC Truth Information}
 \label{sec:nt:truth}
