--- a/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
+++ b/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
@@ -42,9 +42,9 @@ The {\tt GlueX} {\tt FSRoot} format is a flat {\tt TTree} format.  All variables
 \label{sec:fs}
 
 The {\tt FSRoot} format can hold information from any final state composed of a combination of $\Lambda$~(decaying to $p\pi^-$), $\overline\Lambda$~(decaying to $\overline{p}\pi^+$), $e^+$, $e^-$, $\mu^+$, $\mu^-$, $p$, $\bar{p}$, $\eta$~(decaying to $\gamma\gamma$), $\gamma$, $K^+$, $K^-$,
-$K^0_S$~(decaying to $\pi^+\pi^-$), $\pi^+$, $\pi^-$, and $\pi^0$~(decaying to $\gamma\gamma$). 
+$K^0_S$~(decaying to $\pi^+\pi^-$), $\pi^+$, $\pi^-$, and $\pi^0$~(decaying to $\gamma\gamma$).
 
-Final state particles are listed in trees in the following order:  
+Final state particles are listed in trees in the following order:
 \begin{verbatim}
     Lambda ALambda e+ e- mu+ mu- p+ p- eta gamma K+ K- Ks pi+ pi- pi0
 \end{verbatim}
@@ -128,6 +128,16 @@ If PID information is requested, the following variables are added to the tree:
   TkDEDXNDFP(n):   NDF for the DEDX measurement
 \end{verbatim}
 
+Information from the DIRC can be requested using the argument -dirc 1 [it is not included by default]. The following variables will be added to the tree:
+\begin{verbatim}
+  TkLpiDIRCP(n): log-likelihood from DIRC for a pion hypothesis.
+  TkLpDIRCP(n): log-likelihood from DIRC for a proton hypothesis.
+  TkLkDIRCP(n): log-likelihood from DIRC for a kaon hypothesis.
+  TkLeleDIRCP(n): log-likelihood from DIRC for an electron hypothesis.
+  TkNumPhotonsDIRCP(n): number of Cherenkov photons measured in the DIRC.
+  TkXDIRCP(n): x-position in the DIRC.
+  TkYDIRCP(n): y-position in the DIRC.
+\end{verbatim}
 
 \section{Shower Information}
 \label{sec:nt:shower}
@@ -166,12 +176,12 @@ The following variables can be used to help keep track of truth information.
                      0 otherwise
 \end{verbatim}
 
-The {\tt MCDecayParticle} variables are an ordered list of the PDG ID numbers of the particles coming from the initial reaction.  
-For example, for $\gamma p \to \pi^+ \pi^- p$, 
-{\tt MCDecayParticle1} is -211 (for the $\pi^-$); 
-{\tt MCDecayParticle2} is 211 (for the $\pi^+$); 
+The {\tt MCDecayParticle} variables are an ordered list of the PDG ID numbers of the particles coming from the initial reaction.
+For example, for $\gamma p \to \pi^+ \pi^- p$,
+{\tt MCDecayParticle1} is -211 (for the $\pi^-$);
+{\tt MCDecayParticle2} is 211 (for the $\pi^+$);
 {\tt MCDecayParticle3} is 2212 (for the $p$);
-and all the others are zero.  
+and all the others are zero.
 These variables are meant to help distinguish between reactions with different resonances but the same final state (for example $\gamma p \to \rho p$ vs. $\gamma p \to \pi^+ \pi^- p$), but many resonances are not currently included in the analysis trees.
 
 \begin{verbatim}
@@ -190,22 +200,22 @@ Final states are designated using two integers, ``code1'' and ``code2''.  The di
 \begin{verbatim}
     code1 = abcdefg
             a = number of gamma
-            b = number of K+ 
-            c = number of K- 
+            b = number of K+
+            c = number of K-
             d = number of Ks  ( --> pi+ pi- )
-            e = number of pi+ 
-            f = number of pi- 
+            e = number of pi+
+            f = number of pi-
             g = number of pi0 ( --> gamma gamma )
 
     code2 = hijklmnop
             h = number of Lambda (--> p+ pi-)
             i = number of ALambda (--> p- pi+)
             j = number of e+
-            k = number of e- 
-            l = number of mu+ 
+            k = number of e-
+            l = number of mu+
             m = number of mu-
-            n = number of p+ 
-            o = number of p- 
+            n = number of p+
+            o = number of p-
             p = number of eta  ( --> gamma gamma )
 \end{verbatim}
 These integers are sometimes combined into a single string of the form:
