Added optional four-momentum for unused neutrals.

--- a/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
+++ b/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
@@ -147,6 +147,15 @@ Shower information is written out for every reconstructed shower that is part of
   ShQualityP(n):   a shower quality score
 \end{verbatim}
 
+The argument ``-gAddUnusedNeutrals N'' can be used to write out four-momentum information for N unused showers:
+\begin{verbatim}
+  PxPUN(n):  x-momentum of the nth unused shower
+  PyPUN(n):  y-momentum of the nth unused shower
+  PzPUN(n):  z-momentum of the nth unused shower
+  EnPUN(n):  energy of the nth unused shower
+\end{verbatim}
+
+
 \section{Vee Information}
 \label{sec:nt:vee}
 
