Added measured vertex position for tracks.

--- a/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
+++ b/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
@@ -116,6 +116,9 @@ Track information is written out for every reconstructed track that is part of a
 \begin{verbatim}
   TkChi2P(n):   chi2 of the track fit
   TkNDFP(n):    number of degrees of freedom for the track fit
+  TkVxP(n):     x position of the measured track vertex
+  TkVyP(n):     y position of the measured track vertex
+  TkVzP(n):     z position of the measured track vertex
 \end{verbatim}
 
 If PID information is requested, the following variables are added to the tree:
