--- a/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
+++ b/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
@@ -70,8 +70,8 @@ The ``Event Information'' variables contain information about the event as a who
   NumBeam:          number of beam hypotheses from tagger
   NumCombos:        number of combos
 
-  ProdVx:       production vertex parameters
-  ProdVy:         "
+  ProdVx:       production vertex parameters (from X4_Production)
+  ProdVy:         "                       (NOT particle vertices)
   ProdVz:         "
   ProdVt:         "
   PxPB:         kinematically fit beam parameters
