Minor update to the documentation.

--- a/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
+++ b/FlattenForFSRoot/Documentation/GlueXFSRootFormat.tex
@@ -75,22 +75,22 @@ The ``Event Information'' variables contain information about the event as a who
   ProdVz:         "
   ProdVt:         "
   PxPB:         kinematically fit beam parameters
-  PyPB:           "
-  PzPB:           "
+  PyPB:           "             (four-momentum -- Px,Py,Pz,En
+  PzPB:           "                 and vertex -- Vx,Vy,Vz)
   EnPB:           "
   VxPB:           "
   VyPB:           "
   VzPB:           "
   RPxPB:        measured beam parameters
-  RPyPB:          "
-  RPzPB:          "
+  RPyPB:          "             (four-momentum -- Px,Py,Pz,En
+  RPzPB:          "                 and vertex -- Vx,Vy,Vz)
   REnPB:          "
   RVxPB:          "
   RVyPB:          "
   RVzPB:          "
   MCPxPB:       thrown beam parameters (MC only)
-  MCPyPB:         "
-  MCPzPB:         "
+  MCPyPB:         "             (four-momentum -- Px,Py,Pz,En
+  MCPzPB:         "                 and vertex -- Vx,Vy,Vz)
   MCEnPB:         "
   MCEnergy:       "
   MCVxPB:         "
